--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,11 @@
 .bg-orange {
     background-color: #F4723D;
 }
+
+.text-orange {
+    color: #F4723D;
+}
+
+.bg-danger-subtle {
+    background: #f8d7da;
+}
