--- a/style/style.css
+++ b/style/style.css
@@ -9,3 +9,12 @@
 .bg-danger-subtle {
     background: #f8d7da;
 }
+
+.icon-container {
+    color: #F4723D;
+    font-size: 30px;
+}
+
+.card-width {
+    width: 20rem;
+}
